--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/splash-screen": "^4.2.0",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/cordova-builders": "^8.0.0",
     "ionicons": "^6.0.3",
     "moment": "^2.29.4",
     "primeflex": "^3.3.0",
